--- a/bibliotecavirtual/templates/paginas/index.html
+++ b/bibliotecavirtual/templates/paginas/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -17,8 +18,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
-    {% load static %}
+   
+
     <link type="text/css" href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'img/299473583_431963038962228_5821944767849860014_n.jpg' %}">
+   
 
 
 </head>
@@ -34,7 +38,8 @@
         <div class="collapse navbar-collapse" id="myNavbarToggler7">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">UNIVERSIDAD POLITÉCNICA TERRITORIAL AGROINDUSTRIAL DEL TÁCHIRA - SEDE RUBIO</a>
+                    <a class="nav-link" href="#">UNIVERSIDAD POLITÉCNICA TERRITORIAL AGROINDUSTRIAL DEL TÁCHIRA - SEDE
+                        RUBIO</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -73,7 +78,7 @@
             <p>Reseña resumida de la universidad</p>
         </div>
     </div>
-    
+
     <!-- Area para darle Click para registrarse -->
     <section id="header">
 
@@ -83,6 +88,50 @@
             <a href="http://127.0.0.1:8000/login">Ingresar</a>
         </div>
     </section>
+
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{% static '299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="fondo" width="800" height="400">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static '299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="..." width="800" height="400">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'img/299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="..." width="800" height="400">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <!-- Pie de Página -->
     <footer class="footer text-center">
         <div class="container">
