--- a/bibliotecavirtual/templates/paginas/category.html
+++ b/bibliotecavirtual/templates/paginas/category.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -54,7 +54,7 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="company.html"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> PNF</a>
+							<a href="BIBLIOTECA VIRTUAL.html"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> PNF</a>
 						</li>
 						<li>
 							<a href="category.html"><i class="zmdi zmdi-labels zmdi-hc-fw"></i> Categorías</a>
@@ -105,9 +105,9 @@
 		<!-- Content page -->
 		<div class="container-fluid">
 			<div class="page-header">
-			  <h1 class="text-titles"><i class="zmdi zmdi-labels zmdi-hc-fw"></i> Administración <small>CATEORÍAS</small></h1>
+			  <h1 class="text-titles"><i class="zmdi zmdi-labels zmdi-hc-fw"></i> Administración <small>CATEGORÍA DE LIBROS DE ACUERDO A SU PNF</small></h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 
 		<div class="container-fluid">
@@ -119,7 +119,7 @@
 			  	</li>
 			  	<li>
 			  		<a href="categorylist.html" class="btn btn-success">
-			  			<i class="zmdi zmdi-format-list-bulleted"></i> &nbsp; LISTA DE CATEORÍAS
+			  			<i class="zmdi zmdi-format-list-bulleted"></i> &nbsp; LISTA DE CATEGORÍA
 			  		</a>
 			  	</li>
 			</ul>
