--- a/bibliotecavirtual/templates/paginas/companylist.html
+++ b/bibliotecavirtual/templates/paginas/companylist.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -105,9 +105,9 @@
 		<!-- Content page -->
 		<div class="container-fluid">
 			<div class="page-header">
-			  <h1 class="text-titles"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> Administración <small>EMPRESA</small></h1>
+			  <h1 class="text-titles"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> Administración <small>PNF</small></h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 
 		<div class="container-fluid">
@@ -146,8 +146,8 @@
 							<tbody>
 								<tr>
 									<td>1</td>
-									<td>1243567890</td>
-									<td>EL SALVADOR</td>
+									<td>1234</td>
+									<td>INFORMÁTICA</td>
 									
 									<td>
 										<a href="#!" class="btn btn-success btn-raised btn-xs">
@@ -164,8 +164,80 @@
 								</tr>
 								<tr>
 									<td>2</td>
-									<td>9876543212</td>
-									<td>EE.UU</td>
+									<td>567</td>
+									<td>MECÁNICA</td>
+									
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>3</td>
+									<td>234</td>
+									<td>ELECTRÓNICA</td>
+									
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>4</td>
+									<td>875</td>
+									<td>CONSTRUCCIÓN CIVIL</td>
+									
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>5</td>
+									<td>2346</td>
+									<td>AGROALIMENTARIA</td>
+									
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>6</td>
+									<td>765</td>
+									<td>PROCESAMIENTO Y DISTRIBUCIÓN DE ALIMENTOS</td>
 									
 									<td>
 										<a href="#!" class="btn btn-success btn-raised btn-xs">
