--- a/bibliotecavirtual/templates/paginas/login.html
+++ b/bibliotecavirtual/templates/paginas/login.html
@@ -71,8 +71,8 @@
                             <input type="text" placeholder="usuario">
                         </label>
                         <label>
-                            <i class="lni lni-user"></i>
-                            <input type="text" placeholder="usuario">
+                            <i class="lni lni-lock-alt"></i>
+                            <input type="text" placeholder="contraseña">
                         </label>
                         <input type="submit" value="Iniciar Sesión">
                     </form>
