--- a/bibliotecavirtual/templates/paginas/bookconfig.html
+++ b/bibliotecavirtual/templates/paginas/bookconfig.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -108,7 +108,7 @@
 			<div class="page-header">
 			  <h1 class="text-titles"><i class="zmdi zmdi-wrench zmdi-hc-fw"></i> GESTIÓN DE LIBRO</small></h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 		
 		<!-- Tabla de adjuntos -->
@@ -214,64 +214,19 @@
 										<div class="form-group label-floating">
 										  	<label class="control-label">Categoría</label>
 										  	<select name="categoria-up" class="form-control">
-									          	<option value="categoria1">Categoría 1</option>
-									          	<option value="categoria2">Categoría 2</option>
+												<option value="categoria1">LIBRO</option>
+												<option value="categoria2">TESIS</option>
+											  <option value="categoria3">PROYECTO</option>
+											  <option value="categoria4">REVISTA</option>
+											  <option value="categoria5">ARTÍCULO</option>
 									        </select>
 										</div>
 				    				</div>
-				    				<div class="col-xs-12 col-sm-6">
-										<div class="form-group label-floating">
-										  	<label class="control-label">Proveedor</label>
-										  	<select name="proveedor-up" class="form-control">
-									          	<option value="proveedor">Proveedor 1</option>
-									          	<option value="proveedor">Proveedor 2</option>
-									        </select>
-										</div>
-				    				</div>
+				    				
 								</div>
 							</div>
 						</fieldset>
-						<br>
-						<fieldset>
-							<legend><i class="zmdi zmdi-money-box"></i> &nbsp; Precio, Ejemplares y Ubicación</legend>
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-xs-12 col-sm-6">
-								    	<div class="form-group label-floating">
-										  	<label class="control-label">Precio</label>
-										  	<input pattern="[0-9.]{1,7}" class="form-control" type="text" name="precio-up" maxlength="7">
-										</div>
-				    				</div>
-				    				<div class="col-xs-12 col-sm-6">
-								    	<div class="form-group label-floating">
-										  	<label class="control-label">Ejemplares</label>
-										  	<input pattern="[0-9]{1,3}" class="form-control" type="text" name="ejemplares-up" maxlength="3">
-										</div>
-				    				</div>
-				    				<div class="col-xs-12">
-								    	<div class="form-group label-floating">
-										  	<label class="control-label">Ubicación</label>
-										  	<input pattern="[a-zA-Z0-9áéíóúÁÉÍÓÚñÑ ]{1,30}" class="form-control" type="text" name="ubicacion-up" maxlength="30">
-										</div>
-				    				</div>
-								</div>
-							</div>
-						</fieldset>
-						<br>
-						<fieldset>
-							<legend><i class="zmdi zmdi-assignment-o"></i> &nbsp; Resumen del libro</legend>
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-xs-12">
-										<div class="form-group label-floating">
-										  	<label class="control-label">Resumen</label>
-										  	<textarea name="resumen-up" class="form-control" rows="3"></textarea>
-										</div>
-				    				</div>
-								</div>
-							</div>
-						</fieldset>
-						<br>
+						
 						<fieldset>
 							<legend><i class="zmdi zmdi-attachment-alt"></i> &nbsp; Imágen y archivo PDF</legend>
 							<div class="col-xs-12">
@@ -339,9 +294,9 @@
 							<h3 class="panel-title"><i class="zmdi zmdi-delete"></i> &nbsp; ELIMINAR LIBRO</h3>
 						</div>
 						<div class="panel-body">
-							<p class="lead">
+							<!-- <p class="lead">
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatem quas impedit, sint eos corrupti cupiditate.
-							</p>
+							</p> -->
 							<form>
 								<input type="hidden" value="">
 								<p class="text-center">
