--- a/bibliotecavirtual/templates/paginas/bookinfo.html
+++ b/bibliotecavirtual/templates/paginas/bookinfo.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -107,7 +107,7 @@
 			<div class="page-header">
 			  <h1 class="text-titles"><i class="zmdi zmdi-book zmdi-hc-fw"></i> INFORMACIÓN LIBRO</small></h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 		
 		<!-- Panel info libro -->
@@ -128,7 +128,7 @@
 									</div>
 			    				</div>
 			    				<div class="col-xs-12 col-sm-6">
-							    	<img src="assets/book/book-cover.jpg" alt="book" class="img-responsive">
+							    	<img  src="{% static 'assets/book/ICONOLIBRO.png'%}" alt="book" class="img-responsive">
 			    				</div>
 			    				<div class="col-xs-12 col-sm-6">
 							    	<div class="container-fluid">
@@ -170,7 +170,7 @@
 						</div>
 					</fieldset>
 					<br>
-					<fieldset>
+					<!-- <fieldset>
 						<legend><i class="zmdi zmdi-assignment-o"></i> &nbsp; Resumen del libro</legend>
 						<div class="container-fluid">
 							<div class="row">
@@ -182,7 +182,7 @@
 			    				</div>
 							</div>
 						</div>
-					</fieldset>
+					</fieldset> -->
 					<br>
 					<fieldset>
 						<legend><i class="zmdi zmdi-download"></i> &nbsp; Descargar archivo PDF</legend>
