--- a/bibliotecavirtual/templates/paginas/catalog.html
+++ b/bibliotecavirtual/templates/paginas/catalog.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -107,7 +107,7 @@
 			<div class="page-header">
 			  <h1 class="text-titles"><i class="zmdi zmdi-book-image zmdi-hc-fw"></i> CATALOGO</h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 		
 		<div class="container-fluid text-center">
@@ -116,40 +116,40 @@
               <a href="javascript:void(0)" class="btn btn-default btn-raised">SELECCIONE UNA CATEORÍA</a>
               <a href="javascript:void(0)" data-target="dropdown-menu" class="btn btn-default btn-raised dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#!">Categoría 1</a></li>
-                <li><a href="#!">Categoría 2</a></li>
-                <li><a href="#!">Categoría 3</a></li>
-                <li><a href="#!">Categoría 4</a></li>
-                <li><a href="#!">Categoría 5</a></li>
-                <li><a href="#!">Categoría 6</a></li>
-                <li><a href="#!">Categoría 7</a></li>
+                <li><a href="#!">LIBRO</a></li>
+                <li><a href="#!">REVISTA</a></li>
+                <li><a href="#!">TESIS</a></li>
+                <li><a href="#!">PROYECTO</a></li>
+                <li><a href="#!">ARTÍCULO</a></li>
+                
+                
               </ul>
             </div>
 		</div>
 		<div class="container-fluid">
-			<h2 class="text-titles text-center">Categoría seleccionada</h2>
+			<!-- <h2 class="text-titles text-center">Categoría seleccionada</h2> -->
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="list-group">
 						<div class="list-group-item">
 							<div class="row-picture">
-								<img class="circle" src="assets/book/book-default.png" alt="icon">
+								<img class="circle" src="{% static 'assets/book/ICONOLIBRO.png'%}" alt="icon">
 							</div>
 							<div class="row-content">
 								<h4 class="list-group-item-heading">1 - Título completo del libro</h4>
 								<p class="list-group-item-text">
 									<strong>Autor: </strong>Nombre Autor del libro <br>
-									<a href="book-info.html" class="btn btn-primary" title="Más información"><i class="zmdi zmdi-info"></i></a>
+									<a href="bookinfo.html" class="btn btn-primary" title="Más información"><i class="zmdi zmdi-info"></i></a>
 									<a href="#!" class="btn btn-primary" title="Ver PDF"><i class="zmdi zmdi-file"></i></a>
 									<a href="#!" class="btn btn-primary" title="Descargar PDF"><i class="zmdi zmdi-cloud-download"></i></a>
-									<a href="book-config.html" class="btn btn-primary" title="Gestionar libro"><i class="zmdi zmdi-wrench"></i></a>
+									<a href="bookconfig.html" class="btn btn-primary" title="Gestionar libro"><i class="zmdi zmdi-wrench"></i></a>
 								</p>
 							</div>
 						</div>
 						<div class="list-group-separator"></div>
 						<div class="list-group-item">
 							<div class="row-picture">
-								<img src="assets/book/book-cover.jpg" alt="icon">
+								<img  src="{% static 'assets/book/ICONOLIBRO.png'%}" alt="icon">
 							</div>
 							<div class="row-content">
 								<h4 class="list-group-item-heading">2 - Título completo del libro</h4>
