--- a/bibliotecavirtual/templates/paginas/categorylist.html
+++ b/bibliotecavirtual/templates/paginas/categorylist.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -104,9 +104,9 @@
 		<!-- Content page -->
 		<div class="container-fluid">
 			<div class="page-header">
-			  <h1 class="text-titles"><i class="zmdi zmdi-labels zmdi-hc-fw"></i> Administración <small>CATEORÍAS</small></h1>
+			  <h1 class="text-titles"><i class="zmdi zmdi-labels zmdi-hc-fw"></i> Administración <small>CATEGORÍAS DE ACUERDO AL PNF</small></h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 
 		<div class="container-fluid">
@@ -145,8 +145,8 @@
 							<tbody>
 								<tr>
 									<td>1</td>
-									<td>700</td>
-									<td>Desarrollo web</td>
+									<td>001</td>
+									<td>TESIS</td>
 									<td>
 										<a href="#!" class="btn btn-success btn-raised btn-xs">
 											<i class="zmdi zmdi-refresh"></i>
@@ -162,8 +162,8 @@
 								</tr>
 								<tr>
 									<td>2</td>
-									<td>900</td>
-									<td>Diseño gráfico</td>
+									<td>002</td>
+									<td>LIBRO</td>
 									<td>
 										<a href="#!" class="btn btn-success btn-raised btn-xs">
 											<i class="zmdi zmdi-refresh"></i>
@@ -177,6 +177,58 @@
 										</form>
 									</td>
 								</tr>
+								<tr>
+									<td>3</td>
+									<td>003</td>
+									<td>REVISTA</td>
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>3</td>
+									<td>004</td>
+									<td>ARTÍCULO</td>
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								<tr>
+									<td>4</td>
+									<td>005</td>
+									<td>PROYECTO</td>
+									<td>
+										<a href="#!" class="btn btn-success btn-raised btn-xs">
+											<i class="zmdi zmdi-refresh"></i>
+										</a>
+									</td>
+									<td>
+										<form>
+											<button type="submit" class="btn btn-danger btn-raised btn-xs">
+												<i class="zmdi zmdi-delete"></i>
+											</button>
+										</form>
+									</td>
+								</tr>
+								
 							</tbody>
 						</table>
 					</div>
