--- a/bibliotecavirtual/templates/paginas/formulario.html
+++ b/bibliotecavirtual/templates/paginas/formulario.html
@@ -24,12 +24,12 @@
         <div class="full-box dashboard-sideBar-ct">
             <!-- SideBar Title -->
             <div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-                company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+                BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
             </div>
             <!-- SideBar User info -->
             <div class="full-box dashboard-sideBar-UserInfo">
                 <figure class="full-box">
-                    <img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+                    <img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
                     <figcaption class="text-center text-titles">Usuario</figcaption>
                 </figure>
                 <ul class="full-box list-unstyled text-center">
