--- a/bibliotecavirtual/templates/paginas/home.html
+++ b/bibliotecavirtual/templates/paginas/home.html
@@ -16,12 +16,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="{% static '/assets/avatars/AdminMaleAvatar.png'}%" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -116,32 +116,32 @@
 					<i class="zmdi zmdi-account"></i>
 				</div>
 				<div class="full-box tile-number text-titles">
-					<p class="full-box">7</p>
-					<small>Register</small>
+					<p class="full-box">6</p>
+					<small>Registro</small>
 				</div>
 			</article>
 			<article class="full-box tile">
 				<div class="full-box tile-title text-center text-titles text-uppercase">
-					Teacher
+					Profesores
 				</div>
 				<div class="full-box tile-icon text-center">
 					<i class="zmdi zmdi-male-alt"></i>
 				</div>
 				<div class="full-box tile-number text-titles">
 					<p class="full-box">10</p>
-					<small>Register</small>
+					<small>Registro</small>
 				</div>
 			</article>
 			<article class="full-box tile">
 				<div class="full-box tile-title text-center text-titles text-uppercase">
-					Student
+					Estudiantes
 				</div>
 				<div class="full-box tile-icon text-center">
 					<i class="zmdi zmdi-face"></i>
 				</div>
 				<div class="full-box tile-number text-titles">
-					<p class="full-box">70</p>
-					<small>Register</small>
+					<p class="full-box">350</p>
+					<small>Registro</small>
 				</div>
 			</article>
 		</div>
