--- a/bibliotecavirtual/templates/paginas/index.html
+++ b/bibliotecavirtual/templates/paginas/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Biblioteca Virtual</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -18,11 +18,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
-   
+
 
     <link type="text/css" href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'img/299473583_431963038962228_5821944767849860014_n.jpg' %}">
-   
+
 
 
 </head>
@@ -30,16 +30,18 @@
 <body>
     <!-- Barra de navegacion -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #000000;">
-        <a class="navbar-brand d-lg-none" href="#"><img src="logo.png"></a>
+        <a class="navbar-brand d-lg-none" href="#"><img src="{% static 'img/logo.jpeg'%}"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbarToggler7"
             aria-controls="myNavbarToggler7" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"> </span>
         </button>
         <div class="collapse navbar-collapse" id="myNavbarToggler7">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">UNIVERSIDAD POLITÉCNICA TERRITORIAL AGROINDUSTRIAL DEL TÁCHIRA - SEDE
-                        RUBIO</a>
+                    <a class="nav-link" href="#">
+                        <img src="{% static 'img/logo.jpeg'%}">
+                        <h1>UNIVERSIDAD POLITÉCNICA TERRITORIAL AGROINDUSTRIAL DEL TÁCHIRA - SEDE RUBIO</h1>
+                    </a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -55,27 +57,35 @@
         </div>
     </nav>
     <!-- Caja de Mision y vision de la Universidad -->
+    
     <div class="wrapper">
+        <div class="box-area">
+            <div class="icon-area">
+                <i class="lni lni-folder"></i>
+            </div>
+            <h6>Reseña</h6>
+            <p>Creada en el año 2019 en la ciudad de Rubio, Táchira. Actualmente dirigida por el Ing. Freddy Granados.</p>
+        </div>
         <div class="box-area">
             <div class="icon-area">
                 <i class="lni lni-eye"></i>
             </div>
             <h6>Misión</h6>
-            <p>Mision de la universidad</p>
+            <p>Formar ingenieros líderes y creativos para impulsar el progreso</p>
         </div>
         <div class="box-area custom">
             <div class="icon-area">
                 <i class="lni lni-pointer-top"></i>
             </div>
             <h6>Visión</h6>
-            <p>vision de la universidad</p>
+            <p>Ser reconocida como referencia mundial en educación ingenieril innovadora.</p>
         </div>
-        <div class="box-area">
+        <div class="box-area custom">
             <div class="icon-area">
-                <i class="lni lni-folder"></i>
+                <i class="lni lni-bulb"></i>
             </div>
-            <h6>Reseña</h6>
-            <p>Reseña resumida de la universidad</p>
+            <h6>PNF</h6>
+            <p>Informática, Construcción Civil, Mecánica, Agroalimentaria, Electrónica, Procesamiento en Alimentos</p>
         </div>
     </div>
 
@@ -84,8 +94,8 @@
 
         <div class="welcome-text">
             <h1>Biblioteca Virtual</h1>
-            <p>Basta que un libro sea posible para que exista</p>
-            <a href="http://127.0.0.1:8000/login">Ingresar</a>
+            <p>"Basta con que un libro sea posible, para que exista" - Jorge Luis Borges</p>
+            <a href="http://127.0.0.1:8000/login.html">Ingresar</a>
         </div>
     </section>
 
@@ -100,24 +110,32 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{% static '299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="fondo" width="800" height="400">
+                <img src="{% static 'img/299473583_431963038962228_5821944767849860014_n.jpg'%}" class="d-block w-100"
+                    alt="fondo" width="800" height="400">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>NUESTRA AULA MATER SAN CRISTÓBAL</h5>
+                    <p>"La educación es el pasaporte hacia el futuro, ya que el mañana pertenece a aquellos que se preparan hoy." - Malcolm X</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static '299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="..." width="800" height="400">
+                <img src="{% static 'img/fotouno.jpeg'%}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>EGRESADOS UPTAIET</h5>
+                    <p>"El éxito es el resultado de la preparación, el trabajo duro y aprender de los fracasos." - Colin Powell</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'img/299473583_431963038962228_5821944767849860014_n.jpg'}%" class="d-block w-100" alt="..." width="800" height="400">
+                <img src="{% static 'img/fototres.jpeg'%}">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>1º PROMOCIÓN ING. PNF EN INFORMÁTICA</h5>
+                    <p>"La graduación no es el final, es el comienzo de un nuevo capítulo lleno de oportunidades y desafíos."</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'img/fotodos.jpeg'%}">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>INFORMÁTICA TRAYECTO 3</h5>
+                    <p>"El éxito es la suma de pequeños esfuerzos repetidos día tras día." - Robert Collier</p>
                 </div>
             </div>
         </div>
@@ -137,8 +155,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>Copyright</h4>
-                    <p>Maylin Amaya 2023</p>
+                    <p>Maylin Amaya, Gerardo Mattia y Eileen Suárez</p>
+                    <p>PNF En Informática Trayecto III</p>
+                    <p>Copyright © 2023</p>
                 </div>
             </div>
         </div>
