--- a/bibliotecavirtual/templates/paginas/search.html
+++ b/bibliotecavirtual/templates/paginas/search.html
@@ -15,12 +15,12 @@
 		<div class="full-box dashboard-sideBar-ct">
 			<!--SideBar Title -->
 			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title">
-				company <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+				BIBLIOTECA VIRTUAL <i class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
 			</div>
 			<!-- SideBar User info -->
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
-					<img src="./assets/avatars/AdminMaleAvatar.png" alt="UserIcon">
+					<img src="{% static 'img/logo.jpeg'%}" alt="UserIcon">
 					<figcaption class="text-center text-titles">Usuario</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
@@ -106,7 +106,7 @@
 			<div class="page-header">
 			  <h1 class="text-titles"><i class="zmdi zmdi-search zmdi-hc-fw"></i> BUSCAR LIBRO</h1>
 			</div>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p>
+			<!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas reiciendis tempora voluptatum eius porro ipsa quae voluptates officiis sapiente sunt dolorem, velit quos a qui nobis sed, dignissimos possimus!</p> -->
 		</div>
 
 		<div class="container-fluid">
@@ -142,13 +142,13 @@
 		</div>
 
 		<div class="container-fluid">
-			<h2 class="text-titles text-center">Categoría seleccionada</h2>
+			<h2 class="text-titles text-center"></h2>
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="list-group">
 						<div class="list-group-item">
 							<div class="row-picture">
-								<img class="circle" src="assets/book/book-default.png" alt="icon">
+								<img class="circle" src="{% static 'assets/book/ICONOLIBRO.png'%}" alt="icon">
 							</div>
 							<div class="row-content">
 								<h4 class="list-group-item-heading">1 - Título completo del libro</h4>
@@ -164,7 +164,7 @@
 						<div class="list-group-separator"></div>
 						<div class="list-group-item">
 							<div class="row-picture">
-								<img src="assets/book/book-cover.jpg" alt="icon">
+								<img src="{% static 'assets/book/ICONOLIBRO.png'%}" alt="icon">
 							</div>
 							<div class="row-content">
 								<h4 class="list-group-item-heading">2 - Título completo del libro</h4>
